# tech-support-chatbot

./: docs.txt  main.py  pyproject.toml
corpus/: anyconnect_auth_failed.md  anyconnect_auth_troubleshooting_faq.md  ms_printer_spooler_fix.markdown  okta_mfa_push_timeout.markdown  okta_mfa_verify_troubleshooting.md  printer_ticket_redacted_456 (1).markdown  vmware_vsphere_network_recovery.markdown  vsphere_ticket_redacted_678.markdown  windows_printer_connection_fix.md
utils/: embeddings.py
